build: build with react-snap on local

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "postbuild": "react-snap",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
